# scale

./: Cargo.toml  Integrated Scale v29.f3d  Integrated Scale v29.step  README.md
.cargo/: config.toml
arduino-sketch/scale/: scale.ino
arduino-sketch/scale/real_scale/: real_scale.ino
src/: buffer.rs  lib.rs  main.rs  scale.rs
