[package]
name = "scale"
version = "0.1.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp-hal", version = "1.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "embassy",
  "esp32",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }

log                    = "0.4.27"

critical-section = "1.2.0"

embedded-io = "0.7.1"
esp-alloc = "0.9.0"

esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }

esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }

esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32",
  "log-04",
  "unstable",
] }

embassy-executor = "0.9.0"
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5.0"
static_cell = "2.1.1"


trouble-host = { version = "0.5.0", features = [
  "default-packet-pool-mtu-255",
    "derive",
    "scan",
] }
# smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
# embedded-svc = { version = "0.25.3", default-features = false, features = [] }
# embedded-io = "0.4.0"
# heapless = { version = "0.9", default-features = false }
hx711 = { git = "https://github.com/TheOpenDevProject/hx711", rev = "19dbd41" }
nb = "1.1.0"
embedded-hal = { version = "1.0"}
uuid = { version = "1.18.1", features = [], default-features = false }

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"


[features]
log_weights = []
