[package]
name = "scale"
version = "0.1.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp-hal", version = "1.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
    "esp-radio",
    "esp32",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }

log                    = "0.4.27"

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
    "macros",
] }

critical-section = "1.2.0"

embedded-io = "0.7.1"
esp-alloc = "0.9.0"

esp-backtrace = { version = "0.18.1", features = [
  "esp32",
    "panic-handler",
    "println",
] }

esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }

esp-radio = { version = "0.17.0", features = [
  "ble",
    "esp-alloc",
    "esp32",
    "log-04",
    "unstable",
] }

# smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
# embedded-svc = { version = "0.25.3", default-features = false, features = [] }
# embedded-io = "0.4.0"
# heapless = { version = "0.9", default-features = false }
hx711 = "0.7.0"
nb = "1.1.0"
embedded-hal = { version = "1.0"}
uuid = { version = "1.18.1", features = [], default-features = false }

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"


[features]
log_weights = []
